# rag-comparison

./: .gitignore  CLAUDE.md  RAG_vs_NotebookLM_report.pptx  README.md  main.py  pyproject.toml  requirements.txt  run_v3_ab_test.py
.claude/agents/: developer.md  lead-supervisor.md  qa-engineer.md
.kiro/specs/claude-rag-qa/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
data/: notebooklm_answers.json  qa_pairs.json  sources.json
data/docs/: batch_processing.md  constitutional_ai.md  extended_thinking.md  models_overview.md  pdf_support.md  pricing.md  prompt_engineering.md  streaming.md  structured_outputs.md  tool_use.md  vision.md
evaluation/: evaluate.py  scoring_rubric.md
evaluation/results/: analysis.md  rag_results.json  v1_baseline_comparison.md  v2_query_translation_analysis.md  v2_query_translation_rag_results.json  v3_filtering_analysis.md  v3a_no_translate_rag_results.json  v3b_translate_rag_results.json  v4_fact_extraction_analysis.md  v4_fact_extraction_rag_results.json  v5_multi_source_analysis.md  v5_multi_source_rag_results.json  v6_rag_vs_notebooklm_comparison.md  v6_weakness_targeted_analysis.md  v6_weakness_targeted_rag_results.json  v7_table_chunking_analysis.md  v7_table_chunking_rag_results.json
scripts/: generate_report.py  tmux-team.sh
src/: chunker.py  config.py  loader.py  rag.py  vectorstore.py
tests/: test_chunker.py  test_config.py  test_evaluate.py  test_loader.py  test_main.py  test_rag.py  test_vectorstore.py
(+1 files in other folders)
